[tool.poetry]
name = "bettershot"
version = "0.1.8"
description = ""
authors = ["krrishdholakia <krrishdholakia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = ">=0.0.118,<0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
